--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "axios": "^1.7.9",
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^5.0.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.83.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
